--- a/lang/en.json
+++ b/lang/en.json
@@ -1,56 +1,115 @@
 {
 	"bbmm": {
 		"moduleName": "Big Bad Module Manager",
-		"modulePresetMgr": "Module Preset Manager",
-		"settingsPresetMgr": "Settings Preset Manager",
-		"exclusionsMgr": "Exclusions Manager",
+		"moduleInit": "BBMM",
+		"enabled": "Enabled",
+		"disabled": "Disabled",
 		"renamePreset": "Rename Preset",
 		"newName": "New name",
-		"titleImportIssues": "Import Check — Issues Detected",
-		"descImportIssues": "The imported preset was saved, but the following issues were found",
-		"titleModulesNotInstalled": "Modules not installed",
-		"descModulesNotInstalled": "Module not installed",
-		"titleExportModuleState": "Export Current Module State",
 		"exportName": "Export Name",
 		"noteExportFileName": "File will be named",
-		"filenameModuleState": "module-state",
-		"exportNamePrompt": "Please enter an export name",
-		"importNamePrompt": "Please enter a preset name",
-		"titleImportPreset": "Import as module preset",
 		"presetName": "Preset Name",
-		"importedSummary": "Imported preset '{name}' ({count} modules)",
-		"savedPresets": "Saved Presets",
 		"newPresetName": "New preset name",
-		"titleImportExportModuleState": "Export/Import Current Module State",
-		"modulePresets": "BBMM Module Presets",
+		"savedPresets": "Saved Presets",
 		"promptNewPresetName": "Enter a name for the new preset",
-		"savedSummary": "Saved preset '{name}' ({count} modules)",
 		"warnUpdatePreset": "Select a preset to update",
-		"updatedSummary": "Updated Preset '{name}' ({count} modules)",
-		"titleApplyModulePreset": "Apply Module Preset",
-		"promptApplyModulePreset": "Apply module preset <b>{name}</b> to this world?",
 		"titleReloadFoundry": "Reload Foundry?",
 		"promptReloadNow": "Preset applied. Reload now?",
 		"warnSelectPresetDelete": "Select a preset to delete",
+		"deletedPreset": "Deleted preset",
+		"available": "Available",
+		"module": "Module",
+		"state": "State",
+		"setting": "Setting",
+		"scope": "Scope",
+		"confirmRemoval": "Confirm Removal",
+		"total": "Total",
+		"type": "Type",
+		"identifier": "Identifier",
+		"imported": "Imported",
+		"titleReload" : "Reload Foundry",
+		"titlePresetExists": "Preset Exists",
+		"allSettings": "All Settings",
+		"selectModules": "Select Modules",
+		"selectSettings": "Select Settings",
+		"settings": "settings",
+		"myPreset": "My Preset",
+		"incDisabledModules": "Include disabled modules",
+
+		"titleImportIssues": "Import Check — Issues Detected",
+		"descImportIssues": "The imported preset was saved, but the following issues were found",
+		"importNamePrompt": "Please enter a preset name",
+		"importedSummary": "Imported preset '{name}' ({count} modules)",
+		"promptWhatImport": "What would you like to import",
+		"importComplete": "Import complete",
+		"exportNamePrompt": "Please enter an export name",
+
+		"modulePresetMgr": "Module Preset Manager",
+		"titleModulesNotInstalled": "Modules not installed",
+		"descModulesNotInstalled": "Module not installed",
+		"titleExportModuleState": "Export Current Module State",
+		"filenameModuleState": "module-state",
+		"titleImportPreset": "Import as module preset",
+		"titleImportExportModuleState": "Export/Import Current Module State",
+		"modulePresets": "BBMM Module Presets",
+		"savedSummary": "Saved preset '{name}' ({count} modules)",
+		"updatedSummary": "Updated Preset '{name}' ({count} modules)",
+		"titleApplyModulePreset": "Apply Module Preset",
+		"promptApplyModulePreset": "Apply module preset <b>{name}</b> to this world",
 		"titleDeleteModulePreset": "Delete Module Preset",
 		"promptDeleteModulePreset": "Delete module preset", 
-		"deletedPreset": "Deleted preset",
 		"modulePresetsBtn": "Module Presets button",
 		"lblOpenModulePresets": "Open Module Preset Manager",
 		"titleModulePresets": "BBBM Module Presets",
+
+		"settingsPresetMgr": "Settings Preset Manager",
 		"settingsPresetsBtn": "Settings Presets button",
 		"lblOpenSettingsPresets": "Open Settings Preset Manager",
 		"titleSettingsPresets": "BBBM Settings Presets",
+		"promptReload": "Settings preset applied. Reload now to ensure everything initializes correctly",
+		"settingPresetExists": "A settings preset named <b>{name}</b> already exists",
+		"renameSettingPreset": "Rename Settings Preset",
+		"titleImportSettingsPreset": "BBMM — Import Settings to Preset",
+		"importingToPreset": "Importing {count} setting(s) into preset '{name}'",
+		"allSettingsMsg": "All {count} settings in the file will be imported into the preset",
+		"savedSettingsPresets": "Saved Settings Presets",
+		"newSettingPresetName": "New settings preset name",
+		"expImpCurrentSettings": "Export/Import Current Settings",
+		"titleSettingsPresetMgr": "BBMM — Settings Preset Manager",
+		"promptNameSettingsPreset": "Enter a name for the new settings preset",
+		"savedSettingsPreset": "Saved settings preset '{name}'",
+		"selectSettingsPreset": "Select a settings preset to update",
+		"updatedSettingsPreset": "Updated settings preset '{name}'",
+		"selectSettingsPresetLoad": "Select a settings preset to load",
+		"titleApplySettingsPreset": "Apply Settings Preset",
+		"skippedSettingsApply": "Skipped {count} setting(s) for uninstalled or unregistered modules (see console)",
+		"titleDelSettingsPreset": "Delete Settings Preset",
+		"promptDelSettingsPreset": "Delete settings preset <b>{name}</b>",
+		"deletedSettingsPreset": "Deleted settings preset '{name}'",
+		"exportedCurrentSettings": "Exported current settings",
+
+		"exclusionsMgr": "Exclusions Manager",
 		"exclusionsMgrBtn": "Exclusions Manager button",
 		"lblExclusionsMgr": "Open Exclusions Manager",
 		"titleExclusionsMgr": "BBBM Exclusions Manager",
+		"titleAddModuleExclusion": "BBMM — Add Module Exclusion",
+		"addModuleExclusion": "Add Module Exclusion",
+		"allModulesAlreadyExcluded": "All modules are already excluded",
+		"titleAddSettingExclusion": "BBMM — Add Setting Exclusion",
+		"addSettingExclusion": "Add Setting Exclusion",
+		"noEligSettingFound": "No eligible settings found",
+		"titleExclusions": "BBMM - Exclusions",
+		"removeFromExclusions": "Remove from exclusions",
+		"noExclusionsYet": "No exclusions yet",
+		"confirmRemoveModuleExclusion": "Remove module '{title}' from exclusions",
+		"confirmRemoveSettingExclusion": "Remove setting '{ns}.{key}' from exclusions?",
+
 		"debugLevel": "Debug Level",
 		"debugLevelHint": "Logging: all, warnings, errors, none",
 		"debugLevelAll": "All",
 		"debugLevelWarn": "Warnings",
 		"debugLevelErr": "Errors",
 		"debugLevelNone": "None",
-		
 		
 		
 		"buttons": {
@@ -67,11 +126,15 @@
 			"load": "Load",
 			"update": "Update",
 			"delete": "Delete",
+			"exclude": "Exclude",
+			"addModule": "Add Module",
+			"addSetting": "Add Setting",
 			"saveCurrent": "Save Current",
 			"exportToJSON": "Export to .json",
 			"importFromJSON": "Import from .json",
-			"bbmmBtnToolTip": "Open Big Bad Module Manager"
-			
+			"bbmmBtnToolTip": "Open Big Bad Module Manager",
+			"importToPreset": "Import to Preset",
+			"saveCurrentSettings": "Save Current Settings"			
 		},
 		
 		"errors": {
@@ -79,15 +142,28 @@
 			"dependencyMissing": "Dependencies missing",
 			"missing": "missing",
 			"presetExists": "A preset named {name} already exists.",
-			"existsPrompt": "What would you like to do?",
+			"existsPrompt": "What would you like to do",
 			"overwrite": "Overwrite",
 			"rename": "Rename",
 			"titleImportError": "Import Error",
 			"notBBMMFile": "Error! Not a BBMM export. Expected a file created by BBMM",
+			"notBBMMSettingsFile": "Not a BBMM settings export (type 'bbmm-settings')",
 			"invalidJSONFile": "Invalid JSON file",
-			"errorOccured": "An error occurred; see console for details",
-			"exclusionsMgrNotFound": "Exclusions Manager not found"
+			"errorOccured": "An error occurred (see console)",
+			"exclusionsMgrNotFound": "Exclusions Manager not found",
+			"failedToAddExclusion": "Failed to add exclusion",
+			"failedRemoveModuleExclusion": "Failed to remove module exclusion",
+			"failRemoveSettingExclusion": "Failed to remove setting exclusion.",
+			"noSettingsFound": "No settings found in JSON",
+			"importWizFailedCon": "Import Wizard failed during construction (see console)",
+			"importWizFailRen": "Import Wizard failed during render (see console)",
+			"importWizFailOpen": "Failed to open Import Wizard (see console)",
+			"noEntrySelected": "No entries selected",
+			"savePresetFail": "Failed to save preset (see console)",
+			"noModulesDet": "No modules detected",
+			"noSettingsDet": "No settings detected",
+			"selectSettingPresetDelete": "Select a settings preset to delete",
+			"settingsExportFailed": "Settings Export failed (see console)"
 		}
 	}
-	
 }
