--- a/lang/en.json
+++ b/lang/en.json
@@ -111,7 +111,7 @@
 		"debugLevelErr": "Errors",
 		"debugLevelNone": "None",
 		
-		"v12Note": "This module offers minimal support for FoundryVTT v12, allowing you to export settings and module states as prep for updating to v13.<br>NOTE: Some settings may not transfer if the v13 module setting has changed.",
+		"v12Note": "This module offers minimal support for FoundryVTT v12, allowing you to export settings and module states as prep for updating to v13.<br><strong>NOTE:</strong> Some settings may not transfer if the v13 module setting has changed.",
 		"titlev12Legacy": "BBMM: Legacy (v12) Export",
 		"exportedv12Settings": "Exported v12 settings to .json",
 		"exportedv12Modules": "Exported v12 module states to .json",
