--- a/lang/en.json
+++ b/lang/en.json
@@ -112,6 +112,32 @@
 		"debugLevelWarn": "Warnings",
 		"debugLevelErr": "Errors",
 		"debugLevelNone": "None",
+		"selectUsersPushLock":"Select users on Push/Lock",
+		"hintSelectUsersPushLock": "If enabled, clicking the lock or sync icon will open a user picker. No changes are pushed until you click Save changes.",
+		"lockAllTip": "Setting locked for all players",
+		"lockPartialTip": "Setting locked for selected players",
+		"toggleHint": "Lock/Unlock this setting",
+		"dialogSetting": "Setting",
+		"dialogValue": "Value",
+		"dialogNoteCurrentSaved": "Note: pushes current saved value. Be sure to save the setting before Lock/Sync.",
+		"dialogSelectUsers": "Select users",
+		"dialogSelectAll": "Select all",
+		"dialogClear": "Clear",
+		"dialogUser": "User",
+		"dialogRole": "Role",
+		"dialogQueue": "Queue",
+		"dialogQueueLock": "Queue Lock",
+		"dialogQueueSync": "Queue Sync",
+		"dialogNoneSelected": "No users selected.",
+		"roleGM": "GM",
+		"roleTrusted": "Trusted Player",
+		"rolePlayer": "Player",
+		"sourceCore": "Core",
+		"infoQueuedLock": "Queued lock for {module} ({count} users). Will apply on Save.",
+		"infoQueuedSync": "Queued sync for {module} ({count} users). Will apply on Save.",
+		"titleLockForUsers": "Lock Setting for Users",
+		"titleSyncForUsers": "Sync Setting to Users",
+		"infoQueuedUnlock": "Queued unlock for {module}. Will apply on Save.",
 
 		"v12Note": "This module offers minimal support for FoundryVTT v12, allowing you to export settings and module states as prep for updating to v13.<br><strong>NOTE:</strong> Some settings may not transfer if the v13 module setting has changed.",
 		"titlev12Legacy": "BBMM: Legacy (v12) Export",
@@ -119,7 +145,7 @@
 		"exportedv12Modules": "Exported v12 module states to .json",
 		"titlePresetPreview": "Preset changes preview",
 		"noteSaveBeforeLoad": "Tip: Save your current settings before loading a different preset to avoid losing changes",
-
+		
 		"buttons": {
 			"yes": "Yes",
 			"no": "No",
