--- a/lang/en.json
+++ b/lang/en.json
@@ -119,7 +119,7 @@
 		"toggleHint": "Lock/Unlock this setting",
 		"dialogSetting": "Setting",
 		"dialogValue": "Value",
-		"dialogNoteCurrentSaved": "Note: pushes current saved value. Be sure to save the setting before Lock/Sync.",
+		"dialogNoteCurrentSaved": "<b>Note:</b> Pushes current saved value. Be sure to save the setting before Lock/Sync.",
 		"dialogSelectUsers": "Select users",
 		"dialogSelectAll": "Select all",
 		"dialogClear": "Clear",
@@ -129,6 +129,7 @@
 		"dialogQueueLock": "Queue Lock",
 		"dialogQueueSync": "Queue Sync",
 		"dialogNoneSelected": "No users selected.",
+		"dialogNoUsersConnected": "No users connected",
 		"roleGM": "GM",
 		"roleTrusted": "Trusted Player",
 		"rolePlayer": "Player",
