--- a/lang/en.json
+++ b/lang/en.json
@@ -87,9 +87,9 @@
 		"promptDelSettingsPreset": "Delete settings preset <b>{name}</b>",
 		"deletedSettingsPreset": "Deleted settings preset '{name}'",
 		"exportedCurrentSettings": "Exported current settings",
-		"name_showChangelogsOnLogin": "Show Module Changelogs on GM Login",
+		"name_showChangelogsOnLogin": "Show Changelog Report on GM Login",
 		"hint_showChangelogsOnLogin": "If enabled, the GM will be prompted with changelogs for any modules updated since they were last marked seen.",
-		"name_checkDisabledModules": "Check Disabled Modules",
+		"name_checkDisabledModules": "Changelog Report: Check Disabled Modules",
 		"hint_checkDisabledModules": "When enabled, BBMM will also look for changelogs in installed but disabled modules.",
 		"exclusionsMgr": "Exclusions Manager",
 		"exclusionsMgrBtn": "Exclusions Manager",
@@ -275,7 +275,9 @@
 			"Updated": "Settings updated by GM.",
 			"LockedByGM": "Locked by GM",
 			"EnableName": "Enable user/client setting sync",
-			"EnableHint": "GM: When disabled, BBMM will not add lock/sync controls, push values, or enforce/hide user/client settings."
+			"EnableHint": "GM: When disabled, BBMM will not add lock/sync controls, push values, or enforce/hide user/client settings.",
+			"ClickPickUsers": "Click: Select online users to sync",
+			"ShiftAll": "Shift+Click: Soft-Lock keybinds"
 		},
 
 		"inclusions": {
