--- a/lang/en.json
+++ b/lang/en.json
@@ -176,6 +176,10 @@
 		"keybindScopeWorldTip": "Scope: World (blue)",
 		"keybindScopeClientTip": "Scope: Client (orange)",
 
+		"aboutName": "About BBMM",
+		"aboutHint": "Open the About BBMM journal entry.",
+		"aboutOpenMissing": "About BBMM journal entry not found.",
+		"aboutOpenError": "Failed to open the About BBMM journal.",
 		
 		"v12Note": "This module offers minimal support for FoundryVTT v12, allowing you to export settings and module states as prep for updating to v13.<br><strong>NOTE:</strong> Some settings may not transfer if the v13 module setting has changed.",
 		"titlev12Legacy": "BBMM: Legacy (v12) Export",
@@ -266,6 +270,7 @@
 			"BadgeClient": "Client-scoped setting",
 			"ToggleHint": "Lock Player settings",
 			"PushHint": "Sync setting to connected users",
+			"PushHintControls": "Sync key bind to users:",
 			"ToggleError": "Failed to toggle lock.",
 			"ReloadTitle": "Settings Synced",
 			"ReloadMsg": "You have new GM-enforced settings. A reload is required.",
@@ -283,14 +288,19 @@
 		"inclusions": {
 			"manager": "Inclusions",
 			"title": "Inclusions Manager",
+			"btnInclusionMgr": "Open Inclusions Manager",
 			"addSettingTitle": "Add Setting Inclusion",
-			"addSetting": "Add Setting",
 			"none": "No inclusions yet",
 			"noHidden": "No hidden settings available to include",
 			"include": "Include",
 			"failedAddInclusion": "Failed to add inclusion",
 			"failedRemoveInclusion": "Failed to remove inclusion",
-			"remove": "Remove"
+			"remove": "Remove",
+			"addModuleTitle": "Add Module Inclusion",
+			"active": "Active",
+			"inclusionsOpenError": "Failed to open the Inclusions Manager.",
+			"addModuleWarnTitle": "Include Entire Module?",
+			"addModuleWarnMsg": "It is not recommended to include an entire module unless you are sure the data it is saving will be safe. See {docLink} for more information. Continue?"
 		}
 	}
 }
