--- a/lang/en.json
+++ b/lang/en.json
@@ -176,6 +176,13 @@
 		"keybindScopeWorldTip": "Scope: World (blue)",
 		"keybindScopeClientTip": "Scope: Client (orange)",
 
+		"modListEditNotes": "Edit Notes",
+		"modListEditTitle": "Notes – {id}",
+		"modListNotesLabel": "Module Notes",
+		"modListNotesSaved": "Notes saved.",
+		"save": "Save",
+		"cancel": "Cancel",
+
 		"aboutName": "About BBMM",
 		"aboutHint": "Open the About BBMM journal entry.",
 		"aboutOpenMissing": "About BBMM journal entry not found.",
