--- a/lang/fr.json
+++ b/lang/fr.json
@@ -56,12 +56,11 @@
     "promptApplyModulePreset": "Appliquer le préréglage du module <b>{name}</b> à ce monde",
     "titleDeleteModulePreset": "Supprimer le préréglage du module",
     "promptDeleteModulePreset": "Supprimer le préréglage du module",
-    "modulePresetsBtn": "Préréglages de module",
+    "modulePresetsBtn": "Bouton de préréglages du module",
     "lblOpenModulePresets": "Ouvrir le gestionnaire de préréglages de modules",
     "titleModulePresets": "Préréglages du module BGGM",
-    "inclusionsMgr": "Gestionnaire d'inclusions",
     "settingsPresetMgr": "Gestionnaire de préréglages de paramètres",
-    "settingsPresetsBtn": "Préréglages de paramètres",
+    "settingsPresetsBtn": "Bouton de paramètres de préréglages",
     "lblOpenSettingsPresets": "Ouvrir le gestionnaire de préréglages de paramètres",
     "titleSettingsPresets": "Préréglages des paramètres de BGGM",
     "promptReload": "Préréglages des paramètres appliqués. Rechargez maintenant pour vous assurer que tout s'initialise correctement.",
@@ -85,12 +84,12 @@
     "promptDelSettingsPreset": "Supprime le préréglage de paramètres <b>{name}</b>",
     "deletedSettingsPreset": "Préréglage de paramètres '{name}' supprimé",
     "exportedCurrentSettings": "Paramètres actuels exportés",
-    "name_showChangelogsOnLogin": "Afficher le journal des modifications à la connexion du MJ",
+    "name_showChangelogsOnLogin": "Afficher le journal des changements des modules lors de la connection du MJ",
     "hint_showChangelogsOnLogin": "Si cette option est activée, le journal des changements sera affiché au MJ à chaque mise à jour des modules depuis la dernière fois qu'ils ont étaient marqué comme lu.",
-    "name_checkDisabledModules": "Rapport du journal des modifications : vérifier les modules désactivés",
+    "name_checkDisabledModules": "Vérification des modules désactivés",
     "hint_checkDisabledModules": "Lorsque que l'option est activée, BGGM cherchera aussi le journal des changements des modules installés mais désactivés.",
     "exclusionsMgr": "Gestionnaire des exclusions",
-    "exclusionsMgrBtn": "Gestionnaire des exclusions",
+    "exclusionsMgrBtn": "Bouton de gestionnaire des exclusions",
     "lblExclusionsMgr": "Ouvrir le gestionnaire des exclusions",
     "titleExclusionsMgr": "Gestionnaire des exclusions de BGGM",
     "titleAddModuleExclusion": "BGGM — Ajouter une exclusion de module",
@@ -110,71 +109,6 @@
     "debugLevelWarn": "Avertissements",
     "debugLevelErr": "Erreurs",
     "debugLevelNone": "Aucun",
-    "selectUsersPushLock": "Sélectionner les utilisateurs sur Pousser/Verrouiller",
-    "hintSelectUsersPushLock": "En activant cette option, cliquer sur l'icône de verrouillage ou de synchronisation ouvrira un sélecteur d'utilisateur. Aucune modification ne sera appliquée tant que vous n'aurez pas cliqué sur 'Enregistrer les changements'.",
-    "lockAllTip": "Paramètre verrouillé pour tous les joueurs",
-    "lockPartialTip": "Paramètre verrouillé pour les joueurs sélectionnés",
-    "toggleHint": "Verrouiller/déverrouiller ce paramètre",
-    "dialogSetting": "Paramètre",
-    "dialogValue": "Valeur",
-    "dialogNoteCurrentSaved": "<b>Note</b> Pousse les valeurs sauvegardées actuelles. Assurez vous de sauvegarder le paramètre avant de Verrouiller/Synchroniser.",
-    "dialogSelectUsers": "Sélectionner les utilisateurs",
-    "dialogSelectAll": "Sélectionnez les tous",
-    "dialogClear": "Annuler",
-    "dialogUser": "Utilisateur",
-    "dialogRole": "Rôle",
-    "dialogQueue": "File d'attente",
-    "dialogQueueLock": "Verrouillage de la file d'attente",
-    "dialogQueueSync": "Synchronisation de la file d'attente",
-    "dialogNoneSelected": "Aucun utilisateur sélectionné.",
-    "dialogNoUsersConnected": "Aucun utilisateur connecté",
-    "roleGM": "MJ",
-    "roleTrusted": "Joueur de confiance",
-    "rolePlayer": "Joueur",
-    "sourceCore": "Core",
-    "infoQueuedLock": "Verrouillage de la file d'attente pour {module} ({count} utilisateurs). S'appliquera lors de l'enregistrement.",
-    "infoQueuedSync": "Synchronisation de la file d'attente pour {module} ({count} utilisateurs). S'appliquera lors de l'enregistrement.",
-    "titleLockForUsers": "Verrouillage du paramètre pour les utilisateurs",
-    "titleSyncForUsers": "Synchronisation du paramètre vers les utilisateurs",
-    "infoQueuedUnlock": "Déverrouillage de la file d'attente pour {module}. S'appliquera lors de l'enregistrement.",
-    "infoClearedLocks": "Les verrous ont été retirés pour ce paramètre.",
-    "includeHidden": "Enregistrer les paramètres cachés",
-    "includeHiddenWarnTitle": "Inclure les paramètres cachés ?",
-    "includeHiddenWarnMsg": "L'enregistrement et le chargement des paramètres cachés peuvent entraîner des résultats inattendus. Il est conseillé d'utiliser le Gestionnaire des inclusions pour ajouter des paramètres cachés spécifiques. Voulez-vous vraiment enregistrer/exporter les paramètres cachés ?",
-    "click": "Cliquez",
-    "shiftClick": "Maj+clic",
-    "rightClick": "Clic droit",
-    "shiftRightClick": "Maj+clic droit",
-    "name_LockAll": "Tout verrouiller",
-    "name_LockSelected": "Verrouiller la sélection",
-    "name_SoftLock": "Verrouiller sans imposer",
-    "name_ClearLocks": "Retirer les verrous",
-    "name_SetActionClick": "Définir l'action pour le clic :",
-    "name_SetActionShiftClick": "Définir l'action pour Maj+clic :",
-    "name_SetActionRightClick": "Définir l'action pour le clic droit :",
-    "name_SetActionShiftRightClick": "Définir l'action pour Maj+clic droit :",
-    "controlsMgrBtn": "Gestionnaire des commandes",
-    "controlsPresetMgr": "Gestionnaire de préréglages des commandes",
-    "lblOpenControlsPresets": "Ouvrir le gestionnaire de préréglages des commandes",
-    "titleControlsPresets": "Préréglages des commandes de BGGM",
-    "controlsToggleName": "Activer la synchronisation du contrôle (raccourci clavier)",
-    "controlsToggleHint": "En cas d'activation, le MJ peut verrouiller ou verrouiller sans les imposer les raccourcis clavier et les transmettre aux joueurs connectés.",
-    "controlsTtHard": "Verrouiller ce raccourci clavier pour tous les utilisateurs (sera appliqué ; les utilisateurs ne peuvent pas le modifier).",
-    "controlsTtSoft": "Verrouiller ce raccourci clavier sans l'imposer pour tous les utilisateurs (appliqué par défaut ; les utilisateurs pourront le modifier jusqu'à ce que le MJ impose une révision).",
-    "controlsTtClear": "Effacer tout verrouillage imposé ou non pour ce raccourci clavier.",
-    "controlsLockApplied": "Verrouillage imposé du raccourci clavier appliqué.",
-    "controlsSoftApplied": "Verrouillage non imposé du raccourci clavier appliqué.",
-    "controlsCleared": "Effacement du verrouillage du raccourci clavier.",
-    "controlsSoftPresetApplied": "Préréglage non imposé envoyé aux joueurs.",
-    "controlsHardPresetApplied": "Préréglage imposé envoyé aux joueurs.",
-    "keybindColorScopesName": "Code couleur des raccourcis clavier par type",
-    "keybindColorScopesHint": "En cas d'activation : les raccourcis clavier du monde sont bleus ; les raccourcis clavier du client sont orange ; les raccourcis clavier de utilisateur sont ceux par défaut.",
-    "keybindScopeWorldTip": "Type : Monde (bleu)",
-    "keybindScopeClientTip": "Type : Client (orange)",
-    "aboutName": "À propos de BGGM",
-    "aboutHint": "Ouvre l’entrée de journal À propos de BGGM.",
-    "aboutOpenMissing": "Entrée de journal À propos de BGGM non trouvée.",
-    "aboutOpenError": "Impossible d'ouvrir le journal À propos de BGGM.",
     "v12Note": "Ce module offre une compatibilité minimal avec FoundryVTT v12, vous permettant d'exporter les paramètres et les états des modules afin de préparer la mise à jour vers v13.<br><strong>NOTE :</strong> certains paramètres peuvent ne pas être transférés si le paramétrage du module v13 a changé.",
     "titlev12Legacy": "BGGM : Export Legacy (v12) ",
     "exportedv12Settings": "Paramètres v12 exportés au format .json",
@@ -251,15 +185,13 @@
       "marked_seen_all": "Marquer le(s) {count} jounal(aux) des changements comme lu.",
       "remote_placeholder": "Le journal des changements distant ne peut être chargé dans l'application. Utilisez le bouton \"Ouvrir un fichier\" pour le voir.",
       "mark_current_unseen": "Marquer le journal des changements actuel comme non lu",
-      "mark_all_unseen": "Marquer tout comme non lu",
-      "dontShowAgain": "Ne plus afficher pour cette version"
+      "mark_all_unseen": "Marquer tout comme non lu"
     },
     "sync": {
       "BadgeUser": "Option utilisateur",
       "BadgeClient": "Option client",
       "ToggleHint": "Verrouiller les paramètres du jouer",
       "PushHint": "Paramètrage de synchronisation avec les utilisateurs connectés",
-      "PushHintControls": "Synchroniser les raccourcis clavier avec les utilisateurs :",
       "ToggleError": "Impossible de basculer le verrouillage.",
       "ReloadTitle": "Paramètres synchronisés",
       "ReloadMsg": "Vous avez de nouveaux paramètres imposés par le MJ. Le rechargement de la page est requis.",
@@ -269,26 +201,7 @@
       "Updated": "Paramètres mis à jour par le MJ.",
       "LockedByGM": "Verrouillé par le MJ",
       "EnableName": "Activer la synchronisation des paramètres utilisateur/client",
-      "EnableHint": "MJ : lorsqu'il est désactivé, BGGM n'ajoutera ni contrôles de verrouillage/synchronisation, n'imposera pas de valeurs et n'appliquera ni ne masquera les paramètres utilisateur/client.",
-      "ClickPickUsers": "Clic : sélectionnez les utilisateurs en ligne à synchroniser",
-      "ShiftAll": "Maj+Clic : définir sans imposer les raccourcis claviers"
-    },
-    "inclusions": {
-      "manager": "Inclusions",
-      "title": "Gestionnaire d'inclusions",
-      "btnInclusionMgr": "Ouvrir le gestionnaire d'inclusions",
-      "addSettingTitle": "Ajouter un paramétrage d'inclusion",
-      "none": "Aucune inclusion pour le moment",
-      "noHidden": "Aucun paramètre caché disponible à inclure",
-      "include": "Inclure",
-      "failedAddInclusion": "Échec de l'ajout de l'inclusion",
-      "failedRemoveInclusion": "Échec du retrait de l'inclusion",
-      "remove": "Retirer",
-      "addModuleTitle": "Ajouter une inclusion de module",
-      "active": "Actif",
-      "inclusionsOpenError": "Échec de l'ouverture du gestionnaire d'inclusions",
-      "addModuleWarnTitle": "Inclure le module entier ?",
-      "addModuleWarnMsg": "Il est déconseillé d'inclure un module entier, sauf si vous êtes certain que les données qu'il enregistre seront en sécurité. Consultez {docLink} pour plus d'informations. Continuer ?"
+      "EnableHint": "MJ : lorsqu'il est désactivé, BGGM n'ajoutera ni contrôles de verrouillage/synchronisation, n'imposera pas de valeurs et n'appliquera ni ne masquera les paramètres utilisateur/client."
     }
   }
 }
