--- a/lang/en.json
+++ b/lang/en.json
@@ -310,7 +310,9 @@
 			"inclusionsOpenError": "Failed to open the Inclusions Manager.",
 			"addModuleWarnTitle": "Include Entire Module?",
 			"addModuleWarnSeeDoc": "See Documentation",
-			"addModuleWarnMsg": "It is not recommended to include an entire module unless you are sure the data it is saving will be safe. {docLink} Continue?"
+			"addModuleWarnMsg": "It is not recommended to include an entire module unless you are sure the data it is saving will be safe. {docLink} Continue?",
+			"menuHasNoHidden": "That menu has no hidden settings to include.",
+			"noHiddenTooltip": "No hidden settings to include"
 			
 		},
 
